versions/v2.9/modules/en/pages/security/secrets-hub.adoc
= Secrets
:page-languages: [en, zh]
:revdate: 2024-11-19
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/kubernetes-resources-setup/secrets.adoc 
:product-path: security/secrets-hub.adoc
:experimental:
ifeval::["{build-type}" != "community"]
:xref-deploy-workloads: xref:cluster-admin/kubernetes-resources/workloads-and-pods/deploy-workloads.adoc
:xref-k8s-docker-registries: xref:cluster-admin/kubernetes-resources/kubernetes-and-docker-registries.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-deploy-workloads: xref:how-to-guides/new-user-guides/kubernetes-resources-setup/workloads-and-pods/deploy-workloads.adoc
:xref-k8s-docker-registries: xref:how-to-guides/new-user-guides/kubernetes-resources-setup/kubernetes-and-docker-registries.adoc
endif::[]

https://kubernetes.io/docs/concepts/configuration/secret/#overview-of-secrets[Secrets] store sensitive data like passwords, tokens, or keys. They may contain one or more key value pairs.

[NOTE]
====

This page is about secrets in general. For details on setting up a private registry, refer to the section on {xref-k8s-docker-registries}[registries.]
====


When configuring a workload, you'll be able to choose which secrets to include. Like config maps, secrets can be referenced by workloads as either an environment variable or a volume mount.

Mounted secrets will be updated automatically unless they are mounted as subpath volumes. For details on how updated secrets are propagated, refer to the https://kubernetes.io/docs/concepts/configuration/secret/#mounted-secrets-are-updated-automatically[Kubernetes documentation.]

== Creating Secrets in Namespaces

. In the upper left corner, click *☰ > Cluster Management*.
. Go to the cluster where you want to add a secret and click *Explore*.
. To navigate to secrets, you may click either menu:Storage[Secrets] or menu:More Resources[Core > Secrets].
. Click *Create*.
. Select the type of secret you want to create.
. Select a *Namespace* for the secret.
. Enter a *Name* for the secret.
+

[NOTE]
====
Kubernetes classifies secrets, certificates, and registries all as https://kubernetes.io/docs/concepts/configuration/secret/[secrets], and no two secrets in a namespace can have duplicate names. Therefore, to prevent conflicts, your secret must have a unique name among all secrets within your workspace.
====


. From *Data*, click *Add* to add a key-value pair. Add as many values as you need.
+

[TIP]
====
You can add multiple key value pairs to the secret by copying and pasting.
====

+
image::bulk-key-values.gif[]

. Click *Save*.

*Result:* Your secret is added to the namespace you chose. You can view the secret in the Rancher UI by clicking either menu:Storage[Secrets] or menu:More Resources[Core > Secrets].

Mounted secrets will be updated automatically unless they are mounted as subpath volumes. For details on how updated secrets are propagated, refer to the https://kubernetes.io/docs/concepts/configuration/secret/#mounted-secrets-are-updated-automatically[Kubernetes documentation.]

== Creating Secrets in Projects

Before v2.6, secrets were required to be in a project scope. Projects are no longer required, and you may use the namespace scope instead. As a result, the Rancher UI was updated to reflect this new functionality. However, you may still create project-scoped secrets if desired. Note that you have to first enable the `legacy` feature flag and look at a single project to do so. Use the following steps to set up your project-level secret:

. In the upper left corner, click *☰ > Global Settings* in the dropdown.
. Click *Feature Flags*.
. Go to the `legacy` feature flag and click *Activate*.
. In the upper left corner, click *☰ > Cluster Management* in the dropdown.
. Go to the cluster that you created and click *Explore.*
. Click menu:Legacy[Projects].
. In the top navigation bar, filter to see only one project.
. In the left navigation bar, click *Secrets*.
. Click *Add Secret*.

*Result:* Your secret is added to the individual project you chose. You can view the secret in the Rancher UI by clicking either menu:Storage[Secrets] or menu:More Resources[Core > Secrets].

Since project-scoped secrets are set at the project level, any changes made at the namespace level will be overwritten.

[NOTE]
====

Project-scoped secrets on the local cluster are only visible when a single project is selected.
====


== What's Next?

Now that you have a secret added to a namespace, you can add it to a workload that you deploy.

For more information on adding secret to a workload, see {xref-deploy-workloads}[Deploying Workloads].
